 - Log the path to the CDF library for debugging purposes
 - Library.epoch_to_num: convert epoch to matplotlib date number (like date2num)
 - Improve handling of CDF_CHAR element count on py3k
 - Change tests to work with padding/stripping of CDF library 3.6.2 and later
	- It's not clear where the CDF library is stripping and/or padding
	  and pycdf has limited ability to work around this.
time
 - Speed improvement update to TickTock.getleapsecond
 - Overall speed improvements with for loop removal 
 - ISO improvements via special cases for string input
 - Added classmethod today()
toolbox
 - Added function unique_columns
 - Added windowMean keyword op to allow arbitrary operations
 - Bugfixes in windowmean
        - double counting of points on window boundaries
        - one window's width of data could dropped from output series
python3 support
 -updates for python3 support, seems to be complete
AE9AP9
 - added ae9ap9 module to parse and work with output files from the AE9/AP9/SPM models (beta)

Changes in Version 0.1.5 (2014-12-23)
=====================================
- Python 3 support
- documentation updates across many packages
- installer should work better w/pip
- minor bugfixes throughout
datamodel
 - fromHDF5 now reads most netCDF4 and MatLab (v7.3+; r2011b onward) save files
 - add function dmfilled: create a filled dmarray with any given fill value
 - updates to toCDF to allow/use NRV variables
irbempy
 - add function find_footpoint: traces field line from given location to
   specified altitude
 - add functions find_LCDS and find_LCDS_K to find the last closed drift shell
   at given pitch angle or given second invariant K
 - add function AlphaOfK to find the equatorial pitch angle for a specified
   second invariant K
omni
 - get_omni updated to also read from daily JSON-headed ASCII files in
   custom databases
plot
 - new functions in utils:
   - add_logo: put an image in one corner of a figure