@@ -60,6 +60,8 @@ pycdf
  - Change tests to work with padding/stripping of CDF library 3.6.2 and later
 	- It's not clear where the CDF library is stripping and/or padding
 	  and pycdf has limited ability to work around this.
+ - Fix bug where variable attribute entries would get a type not matching
+   the variable.
 time
  - Speed improvement update to TickTock.getleapsecond
  - Overall speed improvements with for loop removal 
